--- a/project-6/package.json
+++ b/project-6/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "supply-chain-E",
+  "name": "supply-chain-e",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "lite-server",
@@ -12,5 +11,15 @@
   "license": "MIT",
   "devDependencies": {
     "lite-server": "2.4.0"
-  }
+  },
+  "dependencies": {
+    "@truffle/contract": "^4.3.39",
+    "truffle-assertions": "^0.9.2",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3": "^0.20.7"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "description": ""
 }
